--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
-  <body>
-    <h2>THIS IS CXM'S RESUME</h2>
-    
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	<h2>THIS IS MY RESUME</h2>
+</body>
 </html>
